# API-platform

./: .babelrc  .coveragerc  .eslintrc  .gitignore  .jshintrc  .travis.yml  Gruntfile.js  LICENSE  MANIFEST.in  Procfile  README.md  README.txt  alembic.ini  app.json  development.ini  index.html  karma.conf.js  karma.config.js  package-lock.json  package.json  params.json  production.ini  pyproject.toml  pytest.ini  requirements.txt  semantic.json  setup.py  webpack.base.config.js  webpack.development.config.js  webpack.karma.config.js  webpack.production.config.js  wsgi.py
alembic/: env.py
alembic/versions/: 1c90823a0fb_create_role_model.py  29a78f538297_create_posts_table.py  2aa08442e7b_added_users_table.py  31cec720de8_add_deleted_column.py  32e02371174_drop_fields_from_users_table.py  342f2b15873_add_created_and_edited_columns_to_tables.py  342f2b15873_add_created_and_updated_columns_to_tables.py  35b5e2b1a21_added_posts_table.py  416215215ea_update_user_table.py  58564bb64da0_create_users_table.py  5a1c1848311_replace_twitter_column_with_live.py  6af28b9c6d77_delete_roles_table.py  a475059c6315_add_columns_to_users_table.py
assets/css/: theme.scss
assets/js/: index.js
canopus/: __init__.py  config.py  query.py  routes.py  tasks.py
canopus/auth/: __init__.py  token_factory.py  views.py
canopus/models/: __init__.py  auth.py  base.py  core.py  query.py  user.py
canopus/schema/: core.py  user.py
canopus/static/: app.a0dc29ae.js  app.a0dc29ae.js.map  manifest.json  runtime.a0dc29ae.js  runtime.a0dc29ae.js.map  vendors.a0dc29ae.js  vendors.a0dc29ae.js.map
canopus/tasks/: queue.py
canopus/templates/: index.html  layout.jinja2  menu.html
canopus/tests/: conftest.py  factories.py  factory.py  fixtures.py  helpers.py
canopus/views/: __init__.py  auth.py  base.py  core.py  crud.py  security.py
client/app/: app.js
demonstrare/: __init__.py  models.py  tasks.py  tests.py  views.py
demonstrare/auth/: jwt.py  policy.py  views.py
demonstrare/mailer/: __init__.py
demonstrare/models/: __init__.py  auth.py  base.py  core.py
demonstrare/resources/: __init__.py  core.py  pyr.py
demonstrare/schema/: core.py
demonstrare/scss/: theme.scss
demonstrare/templates/: index.html  menu.html  mytemplate.pt
demonstrare/views/: base.py  (+2 more)
scripts/: predeploy
tests/: conftest.py  factories.py  fixtures.py
(+80 files in other folders)
