[tool.poetry]
name = "canopus"
version = "1.0.0"
description = ""
authors = ["Josue Montano <josuemontanoa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
alembic = "^1.0"
cornice = "^3.4"
gunicorn = "^19.9"
huey = "^1.10"
ipdb = "^0.11"
ipython = "^7.1"
marshmallow = "3.0.0b13"
marshmallow_enum = "^1.4"
marshmallow_sqlalchemy = "^0.15"
pendulum = "^2.0"
phonenumbers = "^8.10"
plaster_pastedeploy = "^0.6"
psycopg2 = "^2.7"
pyramid = "^1.10"
pyramid_debugtoolbar = "^4.5"
pyramid_ipython = "^0.2.0"
pyramid_jinja2 = "^2.7"
pyramid-jinja2-webpack = "^0.1"
pyramid_jwt = "^1.4"
pyramid_retry = "^1.0"
pyramid_tm = "^2.2"
rollbar = "^0.14"
SQLAlchemy = "^1.2"
SQLAlchemy-Searchable = "^1.0"
SQLAlchemy-Utils = "^0.33"
transaction = "^2.4"
waitress = "^1.1"
webargs = "^4.1"
"zope.sqlalchemy" = "^1.0"
redis = "^2.10"

[tool.poetry.dev-dependencies]
configparser = "^3.5"
factory_boy = "^2.11"
Faker = "^1.0"
freezegun = "^0.3"
pytest = "^3.10"
pytest-cov = "^2.6"
pytest-mock = "^1.10"
pytest-randomly = "^1.2"
WebTest = "^2.0"

[tool.poetry.plugins."paste.app_factory"]
"main" = "canopus:main"
